# cmd/api/routes.go
@@ -27,10 +27,10 @@ func handleRequests(){
 	//CRUD Operations for card info
 	api := myRouter.PathPrefix("/api").Subrouter()
 	api.HandleFunc("/card", createNewCardEntry).Methods(http.MethodPost)
-	api.HandleFunc("/card/all", returnAllCardEntries).Methods(http.MethodGet)
-	api.HandleFunc("/card/number/{number}/set/name/{setName}", returnSingleCardEntry).Methods(http.MethodGet)
-	api.HandleFunc("/card/number/{number}/set/name/{setName}", updateSingleCardEntry).Methods(http.MethodPut)
-	api.HandleFunc("/card/number/{number}/set/name/{setName}", deleteSingleCardEntry).Methods(http.MethodDelete)
+	api.HandleFunc("/cards", returnAllCardEntries).Methods(http.MethodGet)
+	api.HandleFunc("/cards/collector-numbers/{number}/set-names/{setName}", returnSingleCardEntry).Methods(http.MethodGet)
+	api.HandleFunc("/cards/collector-number/{number}/set-names/{setName}", updateSingleCardEntry).Methods(http.MethodPut)
+	api.HandleFunc("/cards/collector-number/{number}/set-names/{setName}", deleteSingleCardEntry).Methods(http.MethodDelete)
 
 	//CRUD Operations for img info
 	api.HandleFunc("/img/set/name/{setName}", returnSingleImg).Methods(http.MethodGet)
